Fix broken layout
fix #1

--- a/www/skins/prod/000000/prodcolor.css
+++ b/www/skins/prod/000000/prodcolor.css
@@ -13,6 +13,10 @@ html, body {
     z-index: 1;
 }
 
+#desktop {
+    min-width: 1100px;
+}
+
 *::-moz-selection, *::selection{
     background: white;
     color: black;
@@ -658,7 +662,7 @@ div.diapo {
 /******* idFrameT CSS *********************************************************/
 
 #idFrameT {
-    margin-left: -29px;
+    margin-left: -20px;
 }
 
 .submenu .ui-buttonset{
